--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer-spacer"></div>
-<footer class="footer">
+<footer class="footer" appScrollReveal [threshold]="0.3" [delay]="50">
   <div class="footer__container">
     <div class="footer__brand">
       <a routerLink="/" aria-label="Go to home">
